fixes bug 1378292
adjusts the whitespace around bug lists throughout TCBS hovers, sig summary, and report index pages.

--- a/webapp-django/crashstats/crashstats/static/crashstats/css/screen.less
+++ b/webapp-django/crashstats/crashstats/static/crashstats/css/screen.less
@@ -1025,10 +1025,9 @@ th.bugzilla_numbers {
     left: 0px;
     background-color: #FFF;
     margin-top: 1em;
-    padding: 1em;
+    padding: 1em 1.5em;
     border: solid 1px #CCC;
     min-width: 300px;
-    width: 50%;
     .rounded-corners(3px);
     h3 {
         margin-bottom: 0.3em;
@@ -1061,9 +1060,7 @@ th.bugzilla_numbers {
     text-decoration: line-through !important;
 }
 .full_bug_ids {
-    margin-left: 1.5em;
     width: 100%;
-    padding: 0 2rem 0 1.5rem;
     li {
         margin: auto 0.5em 0.5em auto;
         list-style-type: none;
